%     }
%   }
%}

\section{CHANGES IN VERSION 2019.0101}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item OpenBugs no longer supported.
      \item All plots converted to ggplot format and stored in the plots object in the final result. An argument is available in the 
      fitting routines to stop saving output to files. 
    }
  }
   \subsection{BUG FIX}{
     \itemize{
       \item  None.
     }
   }
}


\section{CHANGES IN VERSION 2015.0702}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
      \item Bayesian P-values plots are now created using ggplot() and saved in results.
    }
  }
   \subsection{BUG FIX}{
     \itemize{
       \item  Bayesian p-value plots were incorrect for hatchery/wild mixtures.
       \item  Updated Imports/Suggests to conform to latest CRAN standards
     }
   }
}

\section{CHANGES IN VERSION 2014.0901}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
        \item Now uses JAGS rather than OpenBugs so BTSPAS should run on all platforms.
              OpenBUGS can still be run using the 'engine' argument on the *_fit() call.
      \item Minor changes to package file structures to meet R package conventions. No change in 
             functionality.
      \item Minor bug fixes discovered in conversion to JAGS.
 
    }
  }
   \subsection{BUG FIX}{
     \itemize{
       \item Initialized missing values in n1, u2, m2 to sensible values to avoid OpenBugs from 
             wandering too far off and generating nonsense values.
       \item Corrected initialization of epsilon when logitP.fixed is set 
     }
   }
}


\section{CHANGES IN VERSION 2012.0217}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{
       \item Minor changes to package file structures to meet R package conventions. No change in 
             functionality.
    }
  }
   \subsection{BUG FIX}{
     \itemize{
       \item None.
     }
   }
}


\section{CHANGES IN VERSION 2012.0215 and 2012.0216}{
  \subsection{USER-VISIBLE CHANGES}{
    \itemize{