@@ -26,4 +26,5 @@ import(rjags)
 import(splines)
 import(stats)
 import(utils)
+importFrom(actuar,grouped.data)
 importFrom(data.table,setDT)
